--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A comprehensive tool for calculating optimal room allocation for academic conventions",
   "scripts": {
-    "build": "node build.js",
+    "build": "echo 'Static site - no build needed'",
     "dev": "python -m http.server 3000 || php -S localhost:3000 || serve -s .",
     "start": "serve -s ."
   }
