--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
   "name": "convention-room-calculator",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "echo 'No build needed - static site'"
-  }
+  "version": "1.0.0"
 }
